--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "public"
   command = "npm run build"
-  publish = "public"
+  publish = "portfolio"
 
 [[redirects]]
 from = "/*"
