--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/sarah04470/portfolio.git",
-  "license": "MIT"
-  
+  "license": "MIT",
+  "scripts": {
+    "build": "cp src/index.html dist/ && cp src/styles.css dist/ && cp src/app.js dist/"
+  }
 }
