--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "repository": "https://github.com/sarah04470/portfolio.git",
   "license": "MIT",
   "scripts": {
-    "build": "cp src/index.html dist/ && cp src/styles.css dist/ && cp src/app.js dist/"
+    "build": "cp public/index.html dist/ && cp css/style.css dist/"
   }
 }
