--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "repository": "https://github.com/sarah04470/portfolio.git",
   "license": "MIT",
   "scripts": {
-    "build": "mkdir -p public/public/portfolio && cp public/index.html public/public/portfolio/ && cp css/style.css public/public/portfolio/"
+    "build": "cp public/index.html public/public/portfolio/ && cp css/style.css public/public/portfolio/"
   }
 }
