--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/sarah04470/portfolio.git",
   "license": "MIT",
   "scripts": {
-    "build": "cp public/index.html public/portfolio/ && cp css/style.css public/portfolio/"
+    "build": "mkdir -p public/portfolio && cp public/index.html public/portfolio/ && cp css/style.css public/portfolio/"
   },
   "dependencies": {
     "netlify-cli": "^16.0.2"
